feat: add import/export config and refactor settings UI

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,4 +30,5 @@ chrono = "0.4.42"
 window-vibrancy = "0.7.1"
 tokio = { version = "1.49.0", features = ["full"] }
 tauri-plugin-dialog = "2.5.0"
+tauri-plugin-fs = "2"
 
