feat(notifications): implement interactive windows toasts and emoji removal
- bump version to v0.4.5
- replace tauri-plugin-notification with winrt-toast for native windows support
- add 'Open Folder' and 'Mute Notifications' actions to desktop notifications
- refactor UI state management to preserve scan progress during monitor updates
- remove all emojis from notification strings and codebase
- fix scrollbar visibility and colors for light mode
- optimize backend commands to support ID-based monitor updates from notifications

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mist",
   "private": true,
-  "version": "0.4.4",
+  "version": "0.4.5",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mantine/core": "^8.3.12",
     "@mantine/hooks": "^8.3.12",
+    "@mantine/notifications": "^8.3.12",
     "@tabler/icons-react": "^3.36.1",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.5.0",
