--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mist"
-version = "0.4.4"
+version = "0.4.5"
 description = "Mist - A modern, performant folder size monitor for Windows."
 authors = ["FastFingertips"]
 edition = "2021"
@@ -35,6 +35,7 @@ winreg = "0.52"
 tauri-plugin-dialog = "2.5.0"
 tauri-plugin-shell = "2"
 tauri-plugin-fs = "2"
+winrt-toast = "0.1"
 
 [profile.release]
 codegen-units = 1
